2004-05-21  Nick Clifton  <nickc@redhat.com>

	* bfdio.c (bfd_bread): Do not use iovec if it is NULL.
	(bfd_bwrite): Likewise.
	(bfd_tell): Likewise.
	(bfd_flush): Likewise.
	(bfd_stat): Likewise.
	(bfd_seek): Likewise.
	(bfd_get_mtime): Likewise.
	(bfd_get_size): Likewise.

2004-05-19  Ben Elliston  <bje@au.ibm.com>

	* dwarf2.c (_bfd_dwarf2_find_nearest_line): Comment correction.

2004-05-19  Mikulas Patocka  <mikulas@artax.karlin.mff.cuni.cz>

	* archive.c (_bfd_get_elt_at_filepos): Cope with a nested archives.
	(bfd_generic_openr_next_archived_file): Likewise.

2004-05-17  Bob Wilson  <bob.wilson@acm.org>

	* elf32-xtensa.c (xtensa_get_property_section_name): Determine linkonce
	section names by inserting a new substring after .gnu.linkonce, except
	for .gnu.linkonce.t.* where the "t." is replaced.

2004-05-17  Adam Nemet  <anemet@lnxw.com> 

	* config.bfd (sparc-*-lynxos* case): Add to obsolete list.
	(m68-*-lynxos* case): Likewise.
	(powerpc-*-lyxnos* case): New case.
	(i[3-7]86-*-lynxos* case): Update to LynxOS 4.0 ELF.

2004-05-17  David Heine  <dlheine@tensilica.com>

	* aout-target.h (MY_bfd_copy_private_header_data): Define.
	* aout-tic30.c (MY_bfd_copy_private_header_data): Define.
	* bfd.c (bfd_copy_private_header_data): Define.
	* coff-rs6000.c (rs6000coff_vec, pmac_xcoff_vec): Add entries for new
	interface.
	* coff64-rs6000.c (rs6000coff64_vec, aix5coff64_vec): Likewise.
	* coffcode.h (coff_bfd_copy_private_header_data): Define.
	* elf-bfd.h (_bfd_elf_copy_private_header_data): Declare.
	* elf.c (_bfd_elf_copy_private_section_data): Remove code to set up
	segments by calling copy_private_bfd_data.
	(_bfd_elf_copy_private_header_data): Define.
	* elfxx-target.h (bfd_elfNN_bfd_copy_private_header_data): Define.
	* libbfd-in.h (_bfd_generic_bfd_copy_private_header_data): Define.
	* libecoff.h (_bfd_ecoff_bfd_copy_private_header_data): Define.
	* mach-o.c (bfd_mach_o_bfd_copy_private_header_data): Define.